<resources>
    <string name="app_name">tapTrackApp</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_logout">Log out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_in">Welcome to TapTrack</string>
    <string name="title_activity_register">registerActivity</string>

    <!--Strings related to Register -->
    <string name="prompt_group_id">Group ID</string>
    <string name="prompt_group_password">Group Password</string>
    <string name="action_register">Register</string>

    <string name="action_settings">Settings</string>
    <string name="action_newTag">Add a new tag</string>
    <string name="title_activity_root">rootActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">mainActivity</string>
    <string name="title_activity_home">Current Scores</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">testActivity</string>
</resources>
