<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tophamtech.taptrackapp.registerActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/groupId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_group_id"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/groupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_group_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/groupId"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/register"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textStyle="bold"
        android:layout_below="@+id/groupPassword"
        android:layout_alignParentLeft="true" />
</RelativeLayout>